Feat: produzindo paginas seguintes e arrumando as rotas do site

--- a/event/src/pages/login/Login.css
+++ b/event/src/pages/login/Login.css
@@ -6,7 +6,7 @@
 }
 
 .banner{
-    background-image: url("../../assets/img/undraw_login_re_4vu2\ 1.svg");
+    background-image: url("../../assets/img/banner.svg");
 
     flex: 1;
 
