--- a/event/src/components/botao/Botao.css
+++ b/event/src/components/botao/Botao.css
@@ -1,11 +1,10 @@
 .botao{
-    width: 300px;
-    height: 38px;
+    width: 356px;
+    height: 30px;
     border: none;
-    background-color: #B51D44;
     cursor: pointer;
+    background-color: #73061B;
     color: white;
+    border-radius: 6px;
     font-weight: bolder;
-    border-radius: 5px;
-    font-size: small;
 }
