--- a/event/src/components/checkin/Checkin.css
+++ b/event/src/components/checkin/Checkin.css
@@ -1,15 +1,18 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 45px;
-    height: 25px;
+    width: 60px;
+    height: 34px;
   }
-
+  
+  /* Hide default HTML checkbox */
   .switch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
+  
+  /* The slider */
   .slider {
     position: absolute;
     cursor: pointer;
@@ -21,37 +24,38 @@
     -webkit-transition: .4s;
     transition: .4s;
   }
-
+  
   .slider:before {
     position: absolute;
     content: "";
-    height: 15px;
-    width: 15px;
-    left: 1px;
+    height: 26px;
+    width: 26px;
+    left: 4px;
     bottom: 4px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
   }
-
+  
   input:checked + .slider {
-    background-color: #f32821;
+    background-color: red;
   }
-
+  
   input:focus + .slider {
-    box-shadow: 0 0 1px #f32821;
+    box-shadow: 0 0 1px red;
   }
-
+  
   input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
   }
-
+  
+  /* Rounded sliders */
   .slider.round {
     border-radius: 34px;
   }
-
+  
   .slider.round:before {
     border-radius: 50%;
   }
