--- a/event/src/components/footer/Footer.css
+++ b/event/src/components/footer/Footer.css
@@ -1,11 +1,18 @@
 footer{
     display: flex;
     justify-content: center;
-    align-items: center;
-    color: #1f1848;
-    height: 50px;
+    height: 35px;
+    margin-top: 10px;
+}
 
-    font-family: "poppins", sans-serif;
-    font-weight: 200;
-    font-style: normal;
+footer p{
+    text-align: center;
+}   
+
+@media screen and (max-width: 768px){
+
+    footer{
+        
+    }
+    
 }
