--- a/event/src/index.css
+++ b/event/src/index.css
@@ -1,14 +1,8 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.layout_grid{
-  width: 100%;
-  height: 100%;
-  max-width: 80%;
-  margin: 0 auto;
-}
-/* ué */
+
