--- a/event/src/pages/home/Home.css
+++ b/event/src/pages/home/Home.css
@@ -24,7 +24,7 @@
     display: flex;
 }
 
-.cardzin {
+.cardzinho {
     font: "poppins";
     display: flex;
     flex-direction: column;
@@ -51,7 +51,7 @@
 } */
 
 .segundo-banner {
-    background-image: url("../../assets/img/banner2.png");
+    background-image: url("../../assets/banner2.png");
     width: 100%;
     height: 300px;
     color: white;
