--- a/event/src/components/cadastro/Cadastro.css
+++ b/event/src/components/cadastro/Cadastro.css
@@ -3,23 +3,24 @@
     height: 100%;
     max-width: 80%;
     margin: 0 auto;
-  }
+}
 
+.main_cadastro {
+    display: flex;
+    flex-direction: column;
+}
 
-.titulo{
+.titulo {
     display: flex;
     justify-content: center;
     text-transform: uppercase;
     flex-direction: column;
     align-items: center;
-
     margin-top: 50px;
-
     font-size: 13px;
 }
 
-
-.titulo hr{
+.titulo hr {
     border-color: #B51D44;
     width: 230px;
     border-style: solid;
@@ -28,18 +29,14 @@
     border-radius: 2px;
 }
 
-.section_cadastro{
-
+.section_cadastro {
     color: white;
-    padding: 46px 0;
-
     display: flex;
     flex: 1;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    height: 450px;
-
+    height: 700px;
 }
 
 .banner_cadastro {
@@ -50,57 +47,82 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     margin-left: 150px;
 }
 
-.banner_cadastro img{
-    width: 450px;
-    height: 250px;
+.banner_cadastro img {
+    height: 300px;
+    width: auto;
 }
 
-.form_cadastro{
-    width: 100;
+.form_cadastro {
+    width: 100%;
     height: 50%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 200px;
+    margin-top: 120px;
     margin-bottom: 200px;
 }
 
+.campos_cadastro {
+    display: flex;
+    flex-direction: column;
+    padding-inline-start: 50px;
+}
+
 .campo_cad_titulo input,
-.campo_cad_tipoevento select{
-    border: none;
-    margin-bottom: 85px;
+.campo_cad_titulo select,
+.campo_cad_titulo textarea {
+    margin-bottom: 65px;
     padding: 5px 5px;
+    border: none;
     border-bottom: 1px solid black;
     outline: none;
     font-size: 15px;
     width: 356px;
-    border-radius: 1px;
-    
+    display: flex;
 }
 
-.campo_cad_titulo,
-.campo_cad_tipoEvento{
+.campo_cad_tipoevento {
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
+    margin-left: -8px; 
 }
 
-.campo_cad_tipoevento{
-    margin-left: -54px;
+.select_cad {
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    outline: none;
+    padding: 0 5px;
+    width: 355px;
+    height: 30px;
+    margin-bottom: 20px;
+    color: grey;
+    margin-left: 10px ;
 }
 
-@media screen and (max-width: 880px){
-    .campos_input{
+/* Responsivo */
+@media screen and (max-width: 880px) {
+    .campos_cadastro {
         flex-direction: column;
         align-items: center;
-        
+        padding-inline-start: 0;
     }
-    .banner_cadastro{
+
+    .banner_cadastro {
         display: none;
     }
+
+    .section_cadastro {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .form_cadastro {
+        margin-top: 50px;
+        margin-bottom: 100px;
+    }
 }
-
-
