--- a/event/src/pages/listagemEvento/ListagemEvento.css
+++ b/event/src/pages/listagemEvento/ListagemEvento.css
@@ -66,7 +66,7 @@
 .tabela_evento .table_evento th {
     border-bottom: 2px solid #B51D44;
     width: 100px;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     
 }
 
